# MultiPaxos

./: CMakeLists.txt  README.md  fix_json2pb_repeated_field_empty_err.patch
src/: CMakeLists.txt  config.json  config.proto  main.cpp  rpc.proto  storage.proto
src/Core/: Log.h  MultiPaxos.cpp  MultiPaxos.h  Network.cpp  Network.h  Server.cpp  Server.h  Storage.cpp  Storage.h  Storage_mem.cpp  Storage_mem.h  Utils.cpp  Utils.h
